- Forced net code to recheck IP/port when asked
- Non mapping dungeons added. Player does not remember the map.
- Fixed bug which caused towns to be cloned in wild generator.
- Baselevel for new towns is set correctly for getlevel()
- Fixed bug which prevented towers having new_level_up_* set
  if they were maxdepth 1. (Caused endless loop in scatter)

16/12/2001 (Evileye)
- Added multiple store code, so towns have their own stores.
- Server/client changed to display worldpos (messy still)
- Monster filter added to dungeon code
- Fixed compilation problem with control.c
- Houses added to 24 hour maintenance cycle
- Logging added to maintenance (keep logs???)

16/12/2001 (Jir)
- PernA traps (about 160 kinds) and trap system ported.
- Given version number v3.3.0alpha (it'll be v4.0.0 soon :)
- Version warnings for older(/newer) initialize files.

17/12/2001 (Evileye/Jir)
- Fixed a bug where vault didn't contain monsters/objects.
- Fixed a bug where creating a tower caused crash.

17/12/2001 (Jir)
- Fixed a bug where selling an item to a store caused crash.
- Detected traps will interrupt running.
- Fixed a grave bug concerning memory in traps.c.
- Temporary stats drain(mainly for traps).

18/12/2001 (Jir)
- Bugfixes on traps.
- Bugfix: Immobile monsters beneath 5000'

18/12/2001 (Evileye)
- More bugfixes on traps which were causing memory corruption
- Edge of world bug fixed
- Fixed bug in wiz_lite.
- Added signposts - all special info structs need to be stored.

19/12/2001 (Evileye)
- Got rid of dropping 0 gold pieces
- Added c_ptr->special calling design.
- Bug fixed in project_f (bounds check)

19/12/2001 (Jir)
- Magic mapping disallowed inside NOMAP dungeons.
- Traps can be generated under items.
- 3 new traps.
- a bug in trap disarming fixed.

20/12/2001 (Jir)
- '/dis' can destroy items with pseudo-id tags ({good} or below).
- 3 more traps(Voluminous cuisine/Unmagic/Vermin).
- small bugfix on msg of set_biofeedback.
- Bugfix on Morgoth summoning.