@@ -1,5 +1,5 @@
 N:*:Default
-510
+516
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -510,4 +510,9 @@ They say that in this world darkness kills.
 Can a dragon enter into a church?
 They say that pints of ale are expensive deep in the dungeon.
 They say that discordance creeps into your party without making a sound..
-They say that 
+They say that in Mangband most of bugs are inside the code.
+They say that you should always attack a vault from the flank.
+They say that you should be very careful when a trap seemed to do nothing.
+They say that traps of the same name can does various effect.
+They say that true sorcerors never run.
+They say that you should always cross the screen horizontally.
